--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-#------------------------------------------------------------
-# Values for this workshop.
-#------------------------------------------------------------
-
+# HPC Carpentry at NIST CTCMS for SURF students
+---
 # More detailed instructions are available at:
 # https://carpentries.github.io/workshop-template/customization/index.html
 
@@ -18,7 +16,7 @@
 # When setting this field to "incubator", please uncomment the
 # incubator_lesson_site, incubator_pre_survey, and incubator_post_survey
 # lines further down this file and add the URL to the relevant lesson site.
-carpentry: "swc"
+carpentry: "incubator"
 
 # This option is currently only needed for
 # Data Carpentry and Software Carpentry workshops.
@@ -33,7 +31,7 @@ carpentry: "swc"
 # dc-image:         for Data Carpentry Image Processing
 # swc-inflammation: for Software Carpentry based on the inflammation dataset
 # swc-gapminder:    for Software Carpentry based on the Gapminder dataset
-curriculum: "FIXME"
+curriculum: ""
 
 # If there is both an R and python official version of a curriculum
 # (as listed on https://software-carpentry.org/lessons/ and
@@ -41,11 +39,11 @@ curriculum: "FIXME"
 # value of the variable below ("flavor") to get the schedule and installation
 # instructions updated accordingly (valid values are 'r' or 'python').
 # Note: this is only for Data Carpentry and SWC at this time.
-flavor: "FIXME"
+flavor: ""
 
 # If the workshop will be a lesson pilot (for a new official lesson or
 # a lesson in The Carpentries Incubator), set pilot to "true"
-pilot: false
+pilot: true
 
 # Overall title for the Workshop.
 # This variable is used to (optionally) add a title in the "jumbotron"
@@ -53,20 +51,20 @@ pilot: false
 # Most workshops don't use extra pages. More information about extra
 # pages are included in the README:
 # https://github.com/carpentries/workshop-template#creating-extra-pages
-title: "Workshop Title"
+title: "HPC Intro for SURF Students"
 
 #------------------------------------------------------------
 # Incubator workshop settings (only relevant for workshops teaching a lesson
 # in The Carpentries Incubator).
 #
 # For an Incubator workshop, uncomment the line below and add the URL of the lesson site.
-# incubator_lesson_site: "put the URL of the lesson being taught here"
+incubator_lesson_site: "https://hpc-workshops.github.io/ctcms-hpc-intro/"
 #
 # For an Incubator workshop, uncomment the line below and add the URL of your pre-workshop survey
-# incubator_pre_survey: "put the URL of your pre-workshop survey here"
+incubator_pre_survey: "FIXME"
 #
 # For an Incubator workshop, uncomment the line below and add the URL of your post-workshop survey
-# incubator_post_survey: "put the URL of your post-workshop survey here"
+incubator_post_survey: "FIXME"
 #
 #------------------------------------------------------------
 
@@ -114,7 +112,7 @@ pre_survey: "https://carpentries.typeform.com/to/wi32rS?slug="
 post_survey: "https://carpentries.typeform.com/to/UgVdRQ?slug="
 
 # Start time in minutes (0 to be clock-independent, 540 to show a start at 09:00 am).
-start_time: 0
+start_time: 780
 
 # Specify that things in the episodes collection should be output.
 collections:
