--- a/_config.yml
+++ b/_config.yml
@@ -108,8 +108,10 @@ workshop_site: "https://carpentries.github.io/workshop-template"
 cc_by_human: "https://creativecommons.org/licenses/by/4.0/"
 
 # Surveys.
-pre_survey: "https://carpentries.typeform.com/to/wi32rS?slug="
-post_survey: "https://carpentries.typeform.com/to/UgVdRQ?slug="
+# pre_survey: "https://carpentries.typeform.com/to/wi32rS?slug="
+pre_survey: "https://carpentries.typeform.com/to/wi32rS?slug=2024-07-12-SURF"
+# post_survey: "https://carpentries.typeform.com/to/UgVdRQ?slug="
+post_survey: "https://carpentries.typeform.com/to/UgVdRQ?slug=2024-07-12-SURF"
 
 # Start time in minutes (0 to be clock-independent, 540 to show a start at 09:00 am).
 start_time: 780
